# ChangeLog for kde-base/kturtle
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kturtle/ChangeLog,v 1.91 2008/05/18 17:12:27 maekke Exp $

  18 May 2008; Markus Meier <maekke@gentoo.org> kturtle-3.5.9.ebuild:
  amd64/x86 stable, bug #221063

*kturtle-4.0.4 (15 May 2008)

  15 May 2008; Ingmar Vanhassel <ingmar@gentoo.org> +kturtle-4.0.4.ebuild:
  Added KDE 4.0.4 version of kturtle. Thanks to Jorge Manuel B. S. Vicetto.

  15 May 2008; Markus Rothe <corsair@gentoo.org> kturtle-3.5.9.ebuild:
  Stable on ppc64; bug #221063

  13 May 2008; Jeroen Roovers <jer@gentoo.org> kturtle-3.5.9.ebuild:
  Stable for HPPA (bug #221063).

  12 May 2008; Brent Baude <ranger@gentoo.org> kturtle-3.5.9.ebuild:
  Marking kturtle-3.5.9 ppc stable for bug 221063

  12 May 2008; Raúl Porcel <armin76@gentoo.org> kturtle-3.5.9.ebuild:
  alpha/ia64/sparc stable wrt #221063

*kturtle-4.0.3 (03 Apr 2008)

  03 Apr 2008; Wulf C. Krueger <philantrop@gentoo.org>
  +kturtle-4.0.3.ebuild:
  Version bump to KDE 4.0.3. This is still not intended for mainstream so DO
  NOT KEYWORD IT without talking to the KDE herd first.

  20 Mar 2008; Ingmar Vanhassel <ingmar@gentoo.org> -kturtle-4.0.1.ebuild:
  Old.

*kturtle-4.0.2 (10 Mar 2008)

  10 Mar 2008; Wulf C. Krueger <philantrop@gentoo.org>
  +kturtle-4.0.2.ebuild:
  Version bump to KDE 4.0.2

  04 Mar 2008; Jeroen Roovers <jer@gentoo.org> kturtle-3.5.8.ebuild,
  kturtle-3.5.9.ebuild, kturtle-4.0.1.ebuild:
  Keyword split KDE for HPPA.

  23 Feb 2008; Ingmar Vanhassel <ingmar@gentoo.org> kturtle-4.0.1.ebuild:
  Remove traces of monolithic KDE 4.

*kturtle-3.5.9 (20 Feb 2008)

  20 Feb 2008; Wulf C. Krueger <philantrop@gentoo.org>
  +kturtle-3.5.9.ebuild:
  Version bump to KDE 3.5.9.

  16 Feb 2008; Ingmar Vanhassel <ingmar@gentoo.org> -kturtle-3.5.5.ebuild,
  -kturtle-3.5.6.ebuild, -kturtle-3.5.7.ebuild, -kturtle-4.0.0.ebuild:
  Spring cleaning
