@@ -1,0 +1,14 @@
+# Copyright 1999-2008 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kturtle/Attic/kturtle-4.0.5.ebuild,v 1.1 2008/06/05 22:29:26 keytoaster Exp $
+
+EAPI="1"
+
+KMNAME=kdeedu
+inherit kde4-meta
+
+DESCRIPTION="KDE: Educational programming environment using the Logo programming language"
+KEYWORDS="~amd64 ~x86"
+IUSE="debug htmlhandbook"
+
+RDEPEND=">=kde-base/knotify-${PV}:${SLOT}"
