@@ -8,7 +8,8 @@ DIST kdebase-3.5.8.tar.bz2 24200172 RMD160 6441b5eaead5fff5c42c532fb11c0d37001cb
 DIST kdebase-3.5.9.tar.bz2 24239563 RMD160 2552d850e62efd044c178e2eb04efdcce90e4a33 SHA1 a6a19e0b26ed7a2b138a4a7594c8486e26610de8 SHA256 6e958803055928cda73273996696e5f7aaad803a3854853f4ec44428c49c831e
 DIST kdebase-workspace-4.0.2.tar.bz2 29602332 RMD160 84a9a2838d5aa98454aad352963bf5ff5d7e8cb5 SHA1 587ada21c38fe336ebb3574cf3d4b16f842c7804 SHA256 58a10a1446f00ded1142063089252790bf98ae0356dab5c5a666a41dd912cad7
 DIST kdebase-workspace-4.0.3.tar.bz2 29615524 RMD160 c322b491e8f5467cd4e30394791920c4907a910f SHA1 9a8194ae1cc9b2d976efb0438347ba283671c1ca SHA256 7dba55ec99481a155cb4c62d9a9a54a6ec30d4d5eedaca45b25401b1df22127c
-DIST kdebase-workspace-4.0.4.tar.bz2 29604848 RMD160 df9868f650138dc77d6d7f87666a0f4375dcee73 SHA1 c5a3078e602f78ac6a262761b24ad16f3d01e7a7 SHA256 8e641f7e53474d9b39bde9fe183bb5c1f43c11f72a02d271f16fcead5b74b76c
+DIST kdebase-workspace-4.0.4.tar.bz2 2338536 RMD160 d35f5318b2c7dc78f5100033bf229013795d1550 SHA1 644a2bf54fa5000a15fa66470e59fb638db57c61 SHA256 2b78d883c8c281f987bc6f2ad6db985ed9c2403937197e0fd807d82708cd24dd
+DIST kdebase-workspace-4.0.5.tar.bz2 29690232 RMD160 bf234c0633dc3c2ae22d59c0d51234bcb829eb50 SHA1 702236af68f60f43fb07a9289ebee71f1626cc53 SHA256 2c59ed8884d5adf09f84a4f295aecf86cb381d5a3f72bed13ab0c3889f765e3e
 EBUILD kwin-3.5.8.ebuild 680 RMD160 97c8534265b400c3247a88b756b2e3df1f4238ac SHA1 c665608ff64acfdf7772a872640af1c7ca28e1b1 SHA256 b51023eb8f90be4b98bacdbf1f703f8b69cb38436859775229598c8cea684262
 EBUILD kwin-3.5.9-r1.ebuild 838 RMD160 ab0cccd974a97df7486349997d0ff1272cfec6d1 SHA1 23a40580bdd4e5b25098633ed4e714620c742ecc SHA256 3ba7c57f4ec2068addce999df21fc8e2e2ce38f010e9087792fbdcb53d208c46
 EBUILD kwin-3.5.9.ebuild 655 RMD160 1a961dd90db9eb51a0b775aea5b6f4b6add5ccb2 SHA1 425a1362a35664f5cee2b50aeb367979a28ff6ea SHA256 2fcba5ef24138de543e96fa253c76c4fbd1339dd41d337d3490753eb9c26ceec
@@ -16,12 +17,13 @@ EBUILD kwin-4.0.2.ebuild 1203 RMD160 24e1d0aa9ab559b24a0b35f3f5091f91290d9066 SH
 EBUILD kwin-4.0.3.ebuild 1203 RMD160 e0229d9cf14bac96352fb8b5cc265cdc941ace48 SHA1 77b4951ec866792173521360b036835defe8c3ba SHA256 e4317cae67a5661807aa7577e056f1bc08520efd25bbee2b0e1651a4f65bfb98
 EBUILD kwin-4.0.4-r1.ebuild 1254 RMD160 4693bec29af17116c4149917cde7ad63607ca173 SHA1 93c284d7d67328b0e6ba894fd70f4bb4a2518606 SHA256 fdeb19115679a27543a4d2ef771d545d82b2c03bc04c5b20260832bef898d496
 EBUILD kwin-4.0.4.ebuild 1205 RMD160 3a734508bfaf6ded4b4b7d59e7af33f7439e6d65 SHA1 d60209724980f1b9ae9fe4efcc11f61eec5a45d3 SHA256 f49b382ab9438343330048943c84e5bde3cac0a8467065c44b594b0667b46f9d
-MISC ChangeLog 15564 RMD160 624029e1e021d994cd4e919b85ed94e315bbf92d SHA1 5bdad1d841c334d15ef8a0d8541e961c8f0bc729 SHA256 75fa7d390e7dc6ac2537ea520cb8e0528662dc60809f2f10e8d6d91edcb77373
+EBUILD kwin-4.0.5.ebuild 1209 RMD160 f95f931c262a52f81b832a1283822412943a6938 SHA1 9f87f211797194ab50ff09f3e68bcd66d3236349 SHA256 02d38ced6bf8cfae68735782eb60afa7ea06bdeaad3c6ddadac96868dfe9baf6
+MISC ChangeLog 15710 RMD160 11c2e17b1abe4893c2365c936db1147a014f724e SHA1 553ac54f2f8a2b9eef1d92d7c7a22d189ad56bd4 SHA256 7929e7bf3123c1be82b57c471164876fba0110d837af705e5552ec593d13c22c
 MISC metadata.xml 156 RMD160 ecce3b981f150c45ae1e84e2d208e678d6124259 SHA1 b64f7c0b4e5db816d82ad19848f72118af129d35 SHA256 2f4da28506b9d4185f320f67a6191d30c7a921217ed4447ed46ea0bc4aefc79a
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.9 (GNU/Linux)
 
-iEYEARECAAYFAkgwQKoACgkQkKaRLQcq0GK3RwCcCW/oPdOWNr5jBNv133gxLhHU
-DM8AnikcvVsG7+/N6SgwDYAV38+l6g3m
-=4ytt
+iEYEARECAAYFAkhIamEACgkQKfQzuokD2Ip86gCeJpSD/wJ+xYGYSbwX7SW6GjcX
+WMkAn19LgR8ie4HIWbYldTVaD07QIHco
+=jgh1
 -----END PGP SIGNATURE-----
